# fungi-lang.rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  travis.sh
src/: ast.rs  bitype.rs  db.rs  decide.rs  display.rs  dynamics.rs  eval.rs  expand.rs  hostobj.rs  html.rs  lib.rs  normal.rs  parse.rs  prims.rs  reduce.rs  serialize.rs  shared.rs  subst.rs  tgt.rs  tgt_ast.rs  tgt_bitype.rs  tgt_eval.rs  tgt_vis.rs  translate.rs  util.rs  vis.rs  vt100.rs
src/examples/: basic_existentials.rs  basic_hostobj.rs  basic_read_effects.rs  basic_subtyping.rs  basic_write_effects.rs  basic_write_scope.rs  fifo.rs  list_nat.rs  list_nat_convert.rs  list_nat_dedup.rs  list_nat_edit.rs  list_nat_reverse.rs  mod.rs  name.rs  nat.rs  op_nat.rs  pure_lazylist.rs  pure_list_nat.rs  pure_rtq.rs  pure_stream_nat.rs  ref_edit.rs  seq_filter.rs  seq_max.rs  seq_nat.rs  seq_nat_bfs.rs  seq_nat_dfs.rs  seq_nat_dfs_lazy.rs  seq_nat_gen.rs  set_join.rs  stream_nat.rs  trie.rs  trie_nat.rs
src/fungi_stdlib/: mod.rs  seq.rs  seq.rs~
src/stdlib/: chunk.rs  list.rs  mod.rs  opnat.rs  seq.rs  seq_vec_nat.rs  vec.rs
src/stdlib/seq/: mod.rs  seq_nat.rs  seq_poly.rs  seq_poly_nms.rs  seq_vec_nat.rs
tests/: ast.rs  bitype.rs  bitype_filter.rs  eval.rs  examples.rs  filter.rs  fungi_seq.rs  max.rs  mod.rs  normal.rs  qh.rs  quickhull.rs  quicksort.rs  ranksort.rs  tgt_ast.rs  tgt_eval.rs  trie.rs
tests/iodyn/: ranksort.rs
