[package]
name = "fungi-lang"
version = "0.1.63"
authors = ["Matthew A. Hammer", "Kyle Headley", "Ryan Vandersmith"]

# 2018.10.19 -- 
#    Waiting for docs.rs to start permitting Rust 2018; 
#    (Currently, using Rust 2018 breaks the build on docs.rs):
# edition = "2018"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "Fungi: A typed, functional language for programs that name their cached dependency graphs"

# These URLs point to more information about the repository
documentation = "https://docs.rs/fungi-lang"
homepage = "http://adapton.org"
repository = "https://github.com/Adapton/fungi-lang.rust/"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["incremental", "language", "memoization", "dependency_graph", "names"]

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MPL-2.0"


[dependencies]
proc-macro2 = "0.3"
adapton = "0.3"
regex = "0.2"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"
nom = "4.0"

#iodyn = "0.2"
